# webcalc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: webcalc-ci.yml
src/webcalc/: app.py  calculadora.py
tests/: test_app.py  test_calculadora.py
